--- a/app/globals.css
+++ b/app/globals.css
@@ -14,9 +14,14 @@ body {
   box-sizing: border-box;
 }
 
+html,
 body {
   width: 100vw;
   height: 100vh;
+  @media screen and (max-width: 900px) {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 @layer base {
