--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@ pre {
 input,
 select,
 textarea {
-  font-size: 16px; /* or larger */
+  font-size: 16px !important; /* or larger */
 }
 
 @layer base {
